# gltf-renderer

./: CMakeLists.txt  README.md
cmake/: TargetOS.cmake  argparse.cmake  common.cmake  earcut.cmake  eigen.cmake  filament.cmake  nlohmann_json.cmake  tinygltf.cmake
src/: HDRDecoder.cpp  HDRDecoder.h  IBL.cpp  ImageDecoder.cpp  ImageDecoder.h  main.cpp
